--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,10 +25,7 @@
     </div>
     <div id="map"></div>
 
-<!-- Change defer to async AND add the callback -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7sFp3lqbNthsOgpUixNag4Ulzq8VUMuc&libraries=geometry,places&callback=initializeApp" async></script>
-
-<!-- Keep defer on our own script -->
 <script src="script.js" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7sFp3lqbNthsOgpUixNag4Ulzq8VUMuc&callback=initializeApp" async></script>
 </body>
 </html>
