--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,6 @@
       function initializeApp() {}
     </script>
     <script src="script.js" defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=geometry,places&callback=initializeApp" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7sFp3lqbNthsOgpUixNag4Ulzq8VUMuc&libraries=geometry,places&callback=initializeApp" async></script>
 </body>
 </html>
