--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   <button id="fullscreen-map-btn" title="Full screen map">🗖</button>
   <button id="exit-fullscreen-map-btn" title="Exit full screen">✖</button>
 
-  <div id="controls">
+  <div id="controls" class="open">
     <h1>Bike Loop Generator</h1>
 
     <label for="address">Starting Address:</label>
