--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,13 @@
-<!-- ... -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bike Loop Generator</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+</head>
 <body>
   <div id="controls" class="open">
     <div id="header">
@@ -36,7 +45,9 @@
 
   <button id="fullscreen-map-btn" title="Full screen map">🗖</button>
   <button id="exit-fullscreen-map-btn" title="Exit full screen">✖</button>
+
   <div id="map"></div>
+
   <div id="map-legend">
     <span><i style="color:red" class="fa-solid fa-bicycle"></i> Bike</span> |
     <span><i style="color:blue" class="fa-solid fa-person-walking"></i> Walk</span>
