--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,38 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bike Loop Generator</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/0c1e76ad3d.js" crossorigin="anonymous"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js');
+    }
+  </script>
 </head>
 <body>
-  <!-- Bouton TOGGLE indépendant (hors panneau) -->
-  <button id="toggle-button"><i class="fa-solid fa-bars"></i></button>
+  <div id="map"></div>
 
-  <!-- Panneau latéral (rétractable) -->
+  <button id="toggle-button" title="Toggle Menu">
+    <i class="fas fa-bars"></i>
+  </button>
+
   <div id="controls" class="open">
-    <h1>Bike Loop Generator</h1>
+    <h1>Bike<br>Loop<br>Generator</h1>
 
-    <label for="address">Starting Address:</label>
-    <input type="text" id="address" placeholder="Type an address or leave blank">
+    <label for="address"><strong>Starting Address:</strong></label>
+    <input type="text" id="address" placeholder="Type an address or leave blank" />
 
-    <label for="mandatory_waypoint">Include this point (optional):</label>
-    <input type="text" id="mandatory_waypoint" placeholder="e.g., 'Eiffel Tower, Paris'">
+    <label for="mandatory_waypoint"><strong>Include this point (optional):</strong></label>
+    <input type="text" id="mandatory_waypoint" placeholder="e.g., 'Eiffel Tower, Paris'" />
 
-    <label for="distance">Loop Distance (km):</label>
-    <input type="number" id="distance" value="20" min="1">
+    <label for="distance"><strong>Loop Distance (km):</strong></label>
+    <input type="number" id="distance" value="20" min="1" />
 
     <div id="mode-selector">
-      <input type="radio" id="mode-bike" name="travel-mode" value="BICYCLING" checked>
-      <label for="mode-bike"><i class="fa-solid fa-bicycle"></i> Bike</label>
-
-      <input type="radio" id="mode-walk" name="travel-mode" value="WALKING">
-      <label for="mode-walk"><i class="fa-solid fa-person-walking"></i> By Foot</label>
+      <label><input type="radio" name="travel-mode" value="BICYCLING" checked /> 🚲 Bike</label>
+      <label><input type="radio" name="travel-mode" value="WALKING" /> 🚶‍♂️ By Foot</label>
     </div>
 
     <button id="generateBtn">Generate Loop</button>
-
     <div id="status">Enter a starting point and distance, then click Generate.</div>
+
     <a id="gmaps-link" href="#" target="_blank" style="display: none;">Open in Google Maps</a>
 
     <div id="history">
@@ -44,24 +48,14 @@
     </div>
   </div>
 
-  <button id="fullscreen-map-btn" title="Full screen map">🗖</button>
-  <button id="exit-fullscreen-map-btn" title="Exit full screen">✖</button>
+  <button id="fullscreen-map-btn" title="Full Screen Map">
+    ⛶
+  </button>
+  <button id="exit-fullscreen-map-btn" title="Exit Full Screen">
+    ✕
+  </button>
 
-  <div id="map"></div>
-
-  <div id="map-legend">
-    <span><i style="color:red" class="fa-solid fa-bicycle"></i> Bike</span> |
-    <span><i style="color:blue" class="fa-solid fa-person-walking"></i> Walk</span>
-  </div>
-
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').then(() => {
-        console.log('Service Worker registered');
-      });
-    }
-  </script>
   <script src="script.js" defer></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7sFp3lqbNthsOgpUixNag4Ulzq8VUMuc&libraries=geometry,places,marker&callback=initializeApp" async></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7sFp3lqbNthsOgpUixNag4Ulzq8VUMuc&libraries=geometry,places&callback=initializeApp" async defer></script>
 </body>
 </html>
