--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   <button id="exit-fullscreen-map-btn" title="Exit full screen">✖</button>
 
   <div id="controls">
-    <h1>Bike Loop Generator</h1>
+    <h1>PathCycle</h1>
 
     <label for="address">Starting Address:</label>
     <input type="text" id="address" placeholder="Type an address or leave blank">
