--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PathCycle Loop Generator</title> <!-- You can update the title too! -->
+    <title>PathCycle</title> <!-- You can update the title too! -->
     
     <!-- Link to your main stylesheet -->
     <link rel="stylesheet" href="style.css">
