--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,16 +22,14 @@
     <!-- --- END OF NEW CODE --- -->
 </head>
 <body>
-    <!-- The #controls div is now the main container for the sidebar -->
-    <div id="controls" class="open"> <!-- Start with it open by default -->
-        <!-- NEW: Sidebar Header -->
+    <!-- 1. The toggle button now lives on its own, outside the sidebar -->
+    <button id="toggle-button"><i class="fa-solid fa-bars"></i></button>
+
+    <!-- 2. The sidebar no longer contains the toggle button -->
+    <div id="controls">
         <div class="sidebar-header">
-            <!-- 1. Add your logo image -->
             <img src="icon-192.png" alt="PathCycle Logo" class="logo">
-            <!-- 2. The title -->
             <h2>PathCycle</h2>
-            <!-- 3. The toggle button is now inside -->
-            <button id="toggle-button"><i class="fa-solid fa-bars"></i></button>
         </div>
 
         <!-- The rest of the form controls -->
