--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,13 +22,12 @@
     <!-- --- END OF NEW CODE --- -->
 </head>
 <body>
-    <!-- 1. The toggle button now lives on its own, outside the sidebar -->
-    <button id="toggle-button"><i class="fa-solid fa-bars"></i></button>
+    <!-- 1. The toggle button is now also the logo holder -->
+    <div id="logo-toggle-button" title="Toggle Menu"></div>
 
-    <!-- 2. The sidebar no longer contains the toggle button -->
     <div id="controls">
+        <!-- 2. The header now just contains the title -->
         <div class="sidebar-header">
-            <img src="icon-192.png" alt="PathCycle Logo" class="logo">
             <h2>PathCycle</h2>
         </div>
 
