--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
     <!-- 1. The toggle button is now also the logo holder -->
     <div id="logo-toggle-button" title="Toggle Menu"></div>
 
-    <div id="controls">
+    <div id="controls" class="open">
         <!-- 2. The header now just contains the title -->
         <div class="sidebar-header">
             <h2>PathCycle</h2>
